enterprise-kubernetes-platform/microservices/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend
  namespace: microservices

spec:
  ingressClassName: nginx

  rules:
  - host: frontend.localhost

    http:
      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend

            port:

              number: 80
